name:		        X11-xcomposite
version:	        0.1.1
license:	        MIT
license-file:	        LICENSE
copyright:	        Aren Olson, 2011
maintainer:	        Aren Olson <reacocard@gmail.com>
homepage:               https://github.com/reacocard/x11-xcomposite
category:	        Graphics
synopsis:	        A binding to the Xcomposite X11 extension library
description:	        A Haskell binding to the Xcomposite X11 extention graphics library.
	.
	The binding is a direct translation of the C binding; for
	documentation of these calls, refer to man xcomposite(3)
build-type:             Simple
cabal-version:          >= 1.4

Library
    exposed-modules:    Graphics.X11.Xcomposite
    extensions:	        ForeignFunctionInterface, CPP
    extra-libraries:    "Xcomposite"
    build-depends:	base >= 3 && < 5, X11
    ghc-options:        -funbox-strict-fields -Wall -fno-warn-unused-binds
    ghc-prof-options:   -prof -auto-all
